Replaced FilteredRootedPath with DirectoryTreeDigestValue.Key